<resources>
    <string name="app_name">Sob Demana</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">Username</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_sign_up">Sign up</string>
    <string name="text_sign_up">Don\'t you have an account?</string>
    <string name="prompt_fullname">Full name</string>
    <string name="prompt_confim_password">Confirm Password</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="welcome">Welcome!</string>
</resources>
