<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.signup.SignupActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ProgressBar
                android:id="@+id/loading"
                android:theme="@style/progressBarWhite"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:layout_marginTop="18dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        <LinearLayout
                android:id="@+id/mPasswordFormView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:src="@drawable/checklist"
                    android:layout_marginBottom="30dp"
                    android:layout_width="59dp"
                    android:layout_height="59dp"/>

            <EditText
                    android:id="@+id/fullname"
                    android:padding="10dp"
                    android:background="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:layout_marginBottom="@dimen/margin_veritcal_elements"
                    android:hint="@string/prompt_fullname"
                    android:inputType="text"/>

            <EditText
                    android:id="@+id/username"
                    android:padding="10dp"
                    android:layout_marginTop="@dimen/margin_veritcal_elements"
                    android:layout_marginBottom="@dimen/margin_veritcal_elements"
                    android:background="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:hint="@string/prompt_username"
                    android:inputType="text"/>

            <EditText
                    android:id="@+id/password"
                    android:padding="10dp"
                    android:background="@android:color/white"
                    android:layout_marginTop="@dimen/margin_veritcal_elements"
                    android:layout_marginBottom="@dimen/margin_veritcal_elements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:maxLength="20"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"/>

            <EditText
                    android:id="@+id/confirm_password"
                    android:padding="10dp"
                    android:background="@android:color/white"
                    android:layout_marginTop="@dimen/margin_veritcal_elements"
                    android:layout_marginBottom="@dimen/margin_veritcal_elements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:maxLength="20"
                    android:hint="@string/prompt_confim_password"
                    android:inputType="textPassword"/>

            <Button
                    android:id="@+id/bt_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_up"
                    android:onClick="actionSignup"
                    android:layout_marginTop="40dp"
                    android:background="@color/buttonColor"
                    android:textColor="@android:color/white"/>


        </LinearLayout>
    </FrameLayout>
</android.support.v4.widget.NestedScrollView>