<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.signin.SigninActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ProgressBar
                android:id="@+id/loading"
                android:theme="@style/progressBarWhite"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="18dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        <LinearLayout
                android:id="@+id/mPasswordFormView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:src="@drawable/checklist"
                    android:layout_marginBottom="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    android:textColorHint="@color/colorHint">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:padding="10dp"
                        android:background="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:maxLength="20"
                        android:inputType="text"
                        android:hint="@string/prompt_username"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleTint="@color/colorPrimary"
                    app:passwordToggleContentDescription="senha"
                    app:passwordToggleDrawable="@drawable/toggle_password"
                    app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:padding="10dp"
                        android:background="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionGo"
                        android:maxLength="20"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/bt_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAllCaps="false"
                    android:text="@string/action_forgot_password"
                    android:onClick="actionForgotPassword"
                    android:layout_marginTop="@dimen/margin_veritcal_elements"
                    app:elevation="0dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="@android:color/white"/>

            <Button
                    android:id="@+id/bt_sing_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:onClick="actionSignin"
                    android:layout_marginTop="@dimen/margin_veritcal_elements"
                    android:background="@color/buttonColor"
                    android:textColor="@android:color/white"/>

            <TextView
                    android:text="@string/text_sign_up"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textSize="@dimen/font_size_default"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/bt_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_up"
                    android:onClick="actionSingup"
                    android:layout_marginTop="@dimen/margin_veritcal_elements"
                    android:background="@drawable/border_white"
                    android:textColor="@android:color/white"/>

        </LinearLayout>
    </FrameLayout>
</android.support.v4.widget.NestedScrollView>